--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -10,7 +10,7 @@ const { post } = Astro.props;
 const { title, modified, tags } = post.data;
 ---
 
-<BaseLayout title={`${title} | ~/blog`}>
+<BaseLayout title={`${title} | ~/blog`} windowTitle={`${post.slug}.txt - Notepad`}>
   <article class="post">
     <header class="post-header">
       <h1>{title}</h1>
