--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,15 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-import { getCollection } from 'astro:content';
+import BaseLayout from "../layouts/BaseLayout.astro";
+import { getCollection } from "astro:content";
 
-const posts = (await getCollection('posts')).sort(
-  (a, b) => (b.data.modified?.valueOf() ?? 0) - (a.data.modified?.valueOf() ?? 0)
+const posts = (await getCollection("posts")).sort(
+  (a, b) =>
+    (b.data.modified?.valueOf() ?? 0) - (a.data.modified?.valueOf() ?? 0)
 );
 ---
 
-<BaseLayout windowTitle="C:\posts">
+<BaseLayout title="Home | Gabby Ortman" windowTitle="C:\\posts">
   <div class="explorer">
-    <div class="explorer-toolbar">
-      <span>Address:</span>
-      <input type="text" value="C:\posts" readonly class="address-bar" />
-    </div>
     <table class="file-list">
       <thead>
         <tr>
@@ -23,25 +20,27 @@ const posts = (await getCollection('posts')).sort(
         </tr>
       </thead>
       <tbody>
-        {posts.map((post) => (
-          <tr>
-            <td>
-              <a href={`/posts/${post.slug}`} class="file-link">
-                <span class="file-icon">📄</span>
-                {post.slug}.txt
-              </a>
-            </td>
-            <td>
-              {post.data.modified?.toLocaleDateString('en-US', {
-                month: '2-digit',
-                day: '2-digit',
-                year: 'numeric'
-              })}
-            </td>
-            <td>Text Document</td>
-            <td>1 KB</td>
-          </tr>
-        ))}
+        {
+          posts.map((post) => (
+            <tr>
+              <td>
+                <a href={`/posts/${post.slug}`} class="file-link">
+                  <span class="file-icon">📄</span>
+                  {post.slug}.txt
+                </a>
+              </td>
+              <td>
+                {post.data.modified?.toLocaleDateString("en-US", {
+                  month: "2-digit",
+                  day: "2-digit",
+                  year: "numeric",
+                })}
+              </td>
+              <td>Text Document</td>
+              <td>1 KB</td>
+            </tr>
+          ))
+        }
       </tbody>
     </table>
     <div class="status-bar">
