--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -7,22 +7,24 @@ interface Props {
 }
 
 const { post } = Astro.props;
-const { title, modified, tags } = post.data;
+const { title, modified } = post.data;
 ---
 
-<BaseLayout title={`${title} | ~/blog`} windowTitle={`${post.slug}.txt - Notepad`}>
-  <article class="post">
-    <header class="post-header">
-      <h1>{title}</h1>
-      {modified && <time datetime={modified.toISOString()}>{modified.toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}</time>}
-      {tags && tags.length > 0 && (
-        <div class="tags">
-          {tags.map((tag) => <span class="tag">{tag}</span>)}
-        </div>
-      )}
-    </header>
-    <div class="post-content">
-      <slot />
+<BaseLayout title={`${title} | Gabby Ortman`} windowTitle={`${post.slug}.txt - Notepad`}>
+  <div class="notepad">
+    <div class="notepad-menu">
+      <span class="menu-item">File</span>
+      <span class="menu-item">Edit</span>
+      <span class="menu-item">Search</span>
+      <span class="menu-item">Help</span>
     </div>
-  </article>
+    <div class="notepad-content">
+      <div class="notepad-text">
+        <p class="notepad-title">{title}</p>
+        {modified && <p class="notepad-date">{modified.toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}</p>}
+        <p class="notepad-separator">---</p>
+        <slot />
+      </div>
+    </div>
+  </div>
 </BaseLayout>
