--- a/src/pages/changelog/index.astro
+++ b/src/pages/changelog/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import PageHeader from '../../components/PageHeader.astro';
 import { getCollection } from 'astro:content';
-import * as styles from './index.css';
+import * as styles from '../../styles/pages/changelog/index.css';
 
 const entries = (await getCollection('changelog')).sort(
   (a, b) => b.data.timestamp.valueOf() - a.data.timestamp.valueOf()
