--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import PageHeader from '../components/PageHeader.astro';
 import { getCollection, getEntry } from 'astro:content';
 import * as currentsStyles from '../components/Currents.css';
-import * as styles from './index.css';
+import * as styles from '../styles/pages/index.css';
 
 const posts = (await getCollection('posts')).sort(
   (a, b) => (b.data.modified?.valueOf() ?? 0) - (a.data.modified?.valueOf() ?? 0)
