--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import PageHeader from '../../components/PageHeader.astro';
 import { getCollection } from 'astro:content';
-import * as styles from '../index.css';
+import * as styles from '../../styles/pages/index.css';
 
 const posts = (await getCollection('posts')).sort(
   (a, b) => (b.data.modified?.valueOf() ?? 0) - (a.data.modified?.valueOf() ?? 0)
